[package]
name = "lsm_tree"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lsm_tree"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.149"
toml = "0.9.8"
log = "0.4.29"
log4rs = "1.4.0"
md5 = "0.8.0"
thiserror = "2.0.18"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
serial_test = "3.3.1"
